--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "quiz",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next lint && next build",
     "start": "next start",
     "lint": "next lint"
   },
