--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-countdown-circle-timer": "^3.2.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
